re estructura de aplicación
